--- a/Qt/Richess/qml.qrc
+++ b/Qt/Richess/qml.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-        <file>AnimatedEntity.qml</file>
+        <file>NodeEntity.qml</file>
         <file>Resources/pawn.obj</file>
     </qresource>
 </RCC>
